--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,3 +3,9 @@ Metrics/BlockLength:
   Exclude:
     - 'spec/**/*.rb'
     - 'db/schema.rb'
+Style/BlockComments:
+  Exclude:
+    - 'spec/spec_helper.rb'
+Style/MixinUsage:
+  Exclude:
+    - 'bin/*'
